--- a/frontend/src/pages/Products.css
+++ b/frontend/src/pages/Products.css
@@ -76,15 +76,15 @@
            min-height: 120px;
            box-sizing: border-box;
            border: 1px solid #ddd;
-           padding: 10px 12px;
-           margin-bottom: 22px;
+           padding: 10px 12px !important;
+           margin-bottom: 22px !important;
            font-size: 13px;
            border-radius: 0;
            max-width: 100%;
            width: 100%;
            vertical-align: middle;
            background-color: #fff;
-           color: #333;
+           color: #333 !important;
        }
        textarea:hover{
            box-shadow: inset 0 -1.8em 1em 0 rgb(0 0 0 / 0%);
@@ -117,12 +117,14 @@
         padding: 0;
         outline: none;
         cursor: pointer;
-        color: var(--text-color);
+        color: #333 !important;
         display: inline-flex;
         justify-content: center;
         align-items: center;
         line-height: 34px;
+        font-size: 16px;
         font-weight: 700;
+        background-color: #f0f0f0 !important;
     }
        .btn--primary {
         background-color: var(--primary-color);
@@ -131,4 +133,13 @@
     .btn--primary:hover {
         background-color: #09751a;
        
+    }
+    .modal-input {
+        outline: none;
+        box-shadow: inset 0 1px 2px rgb(0 0 0 / 10%);
+        border: 1px solid #ccc;
+        width: 100%;
+        padding: 10px 12px;
+        font-size: 14px;
+        margin-bottom: 20px;
     }
