--- a/frontend/src/pages/Products.css
+++ b/frontend/src/pages/Products.css
@@ -143,3 +143,14 @@
         font-size: 14px;
         margin-bottom: 20px;
     }
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+    
+    /* Works for Firefox */
+    input[type="number"] {
+      -moz-appearance: textfield;
+    }
