--- a/frontend/src/pages/post.css
+++ b/frontend/src/pages/post.css
@@ -4,6 +4,9 @@
     /* object-fit: contain; */
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+}
+.baiviet em{
+    display: inline-block;
+    text-align: center;
+    width: 100%;
 }
